--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ canvas {
 :root {
   --dark-bg: rgba(15, 5, 5, 0.95);
   --red-bg: rgba(200, 80, 80, 0.90);
+  --red-title: rgba(250, 80, 80, 0.90);
+  --dark-red-bg: rgba(150, 80, 80, 0.90);
+
   --spacing: 350px;
 
   font-family: brandon-grotesque, sans-serif;
@@ -45,8 +48,8 @@ main {
 }
 
 .me h1 {
-  color: var(--red-bg);
-  text-shadow: 0 0 0.5em var(--red-bg);
+  color: var(--red-title);
+  text-shadow: 0 0 0.5em var(--red-title);
 }
 
 .about-me {
@@ -66,6 +69,9 @@ main {
 }
 
 
+/*PROJECT*/
+
+
 .projects {
   grid-column: 1 / 12;
   padding: 1rem;
@@ -81,13 +87,13 @@ main {
   padding-right: 5%;
   grid-column: 2 / span 7;
   color: black;
-  background-color: var(--red-bg);
+  background-color: var(--red-title);
   border-radius: 1rem;
   margin-bottom: 75px;
   font-size: 3rem;
   display: inline;
   line-height: 0.5;
-  box-shadow: 0 0 2em 0 var(--red-bg);
+  box-shadow: 0 0 2em 0 var(--red-title);
 }
 
 .project-content {
@@ -103,29 +109,110 @@ main {
 
   border-radius: 1rem;
 
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  box-shadow: -10px -10px 0 1px black;
 
-  /*border-left: var(--dark-bg) 1em solid;*/
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 0.3fr 1fr 1fr;
+  grid-template-rows: 0.3fr 1fr 1fr 0.3fr;
+
 }
 
-/*.project-content:hover {
-  border-left: var(--red-bg) 1em solid;
-} */
 
 
 .project-video {
   grid-column: 5 / 7;
-  grid-row: 2 / 5;
-  width:100%;
-  height: 100%;
+  grid-row: 2 / 4;
+  width: 90%;
+  height: 90%;
   border-radius: 1rem;
+  margin: 5%;
+
+  border: 0.2rem solid var(--red-bg);
+  box-shadow: 0 0 0.5em 0 var(--red-title);
+
+  transition: box-shadow 0.1s ease-in-out;
 }
+.project-video:hover {
+  box-shadow: 0 0 1em 0 var(--red-title);
+}
+
+
 .project-text {
   grid-column: 1 / 4;
-  grid-row: 1 / 5;
+  grid-row: 2 / 4;
 }
+.project-text p {
+  text-align: left;
+}
+
+.project-tags {
+  grid-column: 1 / 7;
+  grid-row: 1;
+  display: flex;
+  align-items: center;
+}
+
+.project-missions {
+  grid-column: 1 / 7;
+  grid-row: 4;
+  display: flex;
+  align-items: center;
+}
+
+
+/*TAGS*/
+
+.tag-bar {
+  margin-right: 8px;
+  width: fit-content;
+  height: fit-content;
+  border-radius: 0.6em;
+  font-weight: 700;
+  padding: 5px;
+  padding-left : 10px;
+  padding-right : 10px;
+
+  color: black;
+  background-color: var(--red-bg);
+
+  transition: transform 0.2s ease;
+}
+.tag-bar:hover {
+  background-color: white;
+  color: black;
+
+  transform: scale(1.05, 1.05);
+  box-shadow: 0 0 1em 0 var(--red-bg);
+}
+
+
+/*MISSIONS*/
+
+.mission-bar {
+  margin-right: 8px;
+  width: fit-content;
+  height: fit-content;
+  border-radius: 0.6em;
+  font-weight: 700;
+  padding: 5px;
+  padding-left : 10px;
+  padding-right : 10px;
+
+  color: black;
+  background-color: var(--dark-red-bg);
+
+  transition: transform 0.2s ease;
+}
+.mission-bar:hover {
+  background-color: rgb(200, 200, 200);
+  color: black;
+
+  transform: scale(1.05, 1.05);
+  box-shadow: 0 0 1em 0 var(--red-bg);
+}
+
+
+/*TOP BAR*/
 
 
 .contact-bar {
@@ -148,10 +235,19 @@ main {
   z-index: 100;
 
   color: white;
+
+  transition: transform 0.2s ease;
 }
 
 .contact-bar:hover {
   background-color: white;
   color: black;
 
+  transform: scale(1.05, 1.05);
+  box-shadow: 0 0 1em 0 var(--red-bg);
 }
+
+
+
+
+
