--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ canvas {
   font-family: brandon-grotesque, sans-serif;
   font-weight: 400;
   font-style: normal;
+  background-color: black;
 }
 
 
@@ -39,7 +40,17 @@ main {
   
   display: grid;
   grid-template-columns: repeat(12, 1fr);
+  
 }
+
+@media only screen and (max-width: 768px) {
+  main {
+    grid-template-columns: repeat(3, 33%);
+  }
+  
+}
+
+
 
 .me {
   background: var(--dark-bg);
@@ -51,6 +62,7 @@ main {
 
   box-shadow: 0 0 2em 0 var(--dark-bg);
 }
+
 
 .me h1 {
   color: var(--red-title);
